# gen-xcompose

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  gen-xcompose.cabal  output.nix  package.nix  shell.nix
src/: GenXCompose.hs
src-exe/: Main.hs
