cabal-version: 3.0
name: gen-xcompose
version: 0.1.0.0
synopsis:
-- description:
homepage:
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: bitdizzy
maintainer: dev@bitdizzy.io
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      GenXCompose
    other-modules:
    other-extensions:
    build-depends: base >=4.14
                 , containers >=0.6
                 , lens
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable gen-xcompose
    main-is: Main.hs
    other-modules:
    other-extensions:
    build-depends: base >=4.14
                 , containers >=0.6
                 , lens
                 , gen-xcompose
    hs-source-dirs:   src-exe
    default-language: Haskell2010
    ghc-options: -Wall
